==> redmorningcn/cvi_app/cvi_modbus/uC-Modbus（源码）/uC-Modbus/uC-Modbus/Ports/ARM7/LPC2000/IAR/MB_BSP.C <==
#include <includes.h>
#define  BIT0   0x01
#define  BIT1   0x02
#define  BIT2   0x04
#define  BIT3   0x08
#define  BIT4   0x10
#define  BIT5   0x20
#define  BIT6   0x40
#define  BIT7   0x80

void  MB_CommPortCfg (MODBUS_CH  *pch,
                      CPU_INT08U  port_nbr,
                      CPU_INT32U  baud,
                      CPU_INT08U  bits,
                      CPU_INT08U  parity,
                      CPU_INT08U  stops)
{
    CPU_INT32U   pinsel;
    CPU_INT32U   peripheral_clk_freq;
    CPU_INT16U   div;                                                 /* Baud rate divisor                          */
    CPU_INT08U   divlo;
    CPU_INT08U   divhi;
    CPU_INT08U   lcr;                                                 /* Line Control Register                      */
    CPU_SR       cpu_sr   = 0;


    if (pch != (MODBUS_CH *)0) {
        pch->PortNbr        = port_nbr;                               /* Store configuration in channel             */
        pch->BaudRate       = baud;
        pch->Parity         = parity;
        pch->Bits           = bits;
        pch->Stops          = stops;
                                                                      /* Compute divisor for desired baud rate      */
        peripheral_clk_freq = BSP_CPU_ClkFreqPeripheral();
        div                 = (CPU_INT16U)(((2 * peripheral_clk_freq / 16 / baud) + 1) / 2);
        divlo               =  div & 0x00FF;                          /* Split divisor into LOW and HIGH bytes      */
        divhi               = (div >> 8) & 0x00FF;
        lcr                 = 0;                                      /* Setup #bits, parity and stop bits          */
        switch (bits) {
            case 7:
                 lcr |= 2 << 0;
                 break;

            case 8:
            default:
                 lcr |= 3 << 0;
                 break;
        }

        switch (parity) {
            case MODBUS_PARITY_ODD:
                 lcr |= BIT3;
                 break;

            case MODBUS_PARITY_EVEN:
                 lcr |= BIT4 | BIT3;
                 break;

            case MODBUS_PARITY_NONE:
            default:
                 break;
        }

        switch (stops) {
            case 1:
                 break;

            case 2:
            default:
                 lcr |= BIT2;
                 break;
        }

        switch (port_nbr) {                                           /* Determine which serial port is assigned    */
            case 0:
                 CPU_CRITICAL_ENTER();
				 pinsel              = PINSEL0;						  /* Enable UART0 I/Os                          */
				 pinsel             &= 0xFFFFFFF0;
				 pinsel             |= 0x00000005;
                 PINSEL0             = pinsel;
                 U0LCR               = BIT7;                          /* Set divisor access bit                     */
                 U0DLL               = divlo;                         /* Load divisor                               */
                 U0DLM               = divhi;
                 U0LCR               = lcr;                           /* Set line control register (Bit 8 is 0)     */
                 U0IER               = BIT0;                          /* Enable Rx interrupts only                  */
                 U0FCR               = 0x07;                          /* Enable FIFO, flush Rx & Tx                 */
                 CPU_CRITICAL_EXIT();
                                                                      /* VIC UART #0 Initialization                 */
                 VICIntSelect       &= ~(1 << VIC_UART0);             /* Enable interrupts                          */
                 VICVectAddr14       = (CPU_INT32U)MB_CommRxTxISR_0_Handler; /* Set the vector address              */
                 VICVectCntl14       = 0x20 | VIC_UART0;              /* Enable vectored interrupts                 */
                 VICIntEnable        =  (1 << VIC_UART0);             /* Enable Interrupts                          */
                 break;

            case 1:
                 CPU_CRITICAL_ENTER();
				 pinsel              = PINSEL0;						  /* Enable UART1 I/Os                          */
				 pinsel             &= 0xFFF0FFFF;
				 pinsel             |= 0x00050000;
                 PINSEL0             = pinsel;
                 U1LCR               = BIT7;                          /* Set divisor access bit                     */
                 U1DLL               = divlo;                         /* Load divisor                               */
                 U1DLM               = divhi;
                 U1LCR               = lcr;                           /* Set line control register (Bit 8 is 0)     */
                 U1IER               = BIT0;                          /* Enable Rx interrupts only                  */
                 U1FCR               = 0x07;                          /* Enable FIFO, flush Rx & Tx                 */
                 CPU_CRITICAL_EXIT();
                                                                      /* VIC UART #1 Initialization                 */
                 VICIntSelect       &= ~(1 << VIC_UART1);             /* Enable interrupts                          */
                 VICVectAddr14       = (CPU_INT32U)MB_CommRxTxISR_1_Handler; /* Set the vector address              */
                 VICVectCntl14       = 0x20 | VIC_UART1;              /* Enable vectored interrupts                 */
                 VICIntEnable        =  (1 << VIC_UART1);             /* Enable Interrupts                          */
        }
    }
}

void  MB_CommRxIntDis (MODBUS_CH  *pch)
{
    CPU_SR  cpu_sr = 0;


    CPU_CRITICAL_ENTER();
    switch (pch->PortNbr) {
        case 0:
             U0IER = 0;
             break;

        case 1:
             U1IER = 0;
             break;
    }
    CPU_CRITICAL_EXIT();
}

void  MB_CommRxIntEn (MODBUS_CH  *pch)
{
    CPU_SR  cpu_sr = 0;


    CPU_CRITICAL_ENTER();
    switch (pch->PortNbr) {
        case 0:
             U0IER = BIT0;
             break;

        case 1:
             U1IER = BIT0;
             break;
    }
    CPU_CRITICAL_EXIT();
}

void  MB_CommTx1 (MODBUS_CH  *pch,
                  CPU_INT08U  c)
{
    switch (pch->PortNbr) {
        case 0:
             U0THR = c;
             break;

        case 1:
             U1THR = c;
             break;
    }
}

void  MB_CommTxIntDis (MODBUS_CH  *pch)
{
    CPU_SR  cpu_sr = 0;


    CPU_CRITICAL_ENTER();
    switch (pch->PortNbr) {                       /* Just enable the receiver interrupt                */
        case 0:
             U0IER = BIT0;
             break;

        case 1:
             U1IER = BIT0;
             break;
    }
    CPU_CRITICAL_EXIT();
}

void  MB_CommTxIntEn (MODBUS_CH  *pch)
{
    CPU_SR  cpu_sr = 0;


    CPU_CRITICAL_ENTER();
    switch (pch->PortNbr) {                       /* Just enable the receiver interrupt                */
        case 0:
             U0IER = BIT1 | BIT0;
             break;

        case 1:
             U1IER = BIT1 | BIT0;
             break;
    }
    CPU_CRITICAL_EXIT();
}

void  MB_RTU_TmrInit (void)
{
    CPU_INT32U  peripheral_clk_freq;


    peripheral_clk_freq  = BSP_CPU_ClkFreqPeripheral();
    MB_Tmr_ReloadCnts    = peripheral_clk_freq / MB_RTU_Freq;
    T1TCR                = 0;                                 /* Disable timer 1.                           */
    T1PC                 = 0;                                 /* Prescaler is set to no division.           */
    T1MR0                = T1TC + MB_Tmr_ReloadCnts;
    T1MCR                = 1;                                 /* Interrupt on MR0 (match register 0).       */
    T1CCR                = 0;                                 /* Capture is disabled.                       */
    T1EMR                = 0;                                 /* No external match output.                  */
    T1TCR                = 1;                                 /* Enable timer 1                             */

    VICIntSelect        &= ~(1 << VIC_TIMER1);                /* Enable interrupts                          */
    VICVectAddr13        = (CPU_INT32U)MB_RTU_TmrISR_Handler; /* Set the vector address                     */
    VICVectCntl13        = 0x20 | VIC_TIMER1;                 /* Enable vectored interrupts                 */
    VICIntEnable         =  (1 << VIC_TIMER1);                /* Enable Interrupts                          */

    MB_RTU_TmrResetAll();                                     /* Reset all the RTU timers, we changed freq. */
}

void  MB_RTU_TmrISR_Handler (void)
{
    T1IR         = 0xFF;                         /* Clear timer #1 interrupt                           */
                                                 /* Reload 'relative' to current interrupt time        */
    T1MR0        = T1TC + MB_Tmr_ReloadCnts;
    VICVectAddr  = 0;

    MB_RTU_TmrCtr++;                             /* Indicate that we had activities on this interrupt. */
    MB_RTU_TmrUpdate();                          /* Check for RTU timers that have expired             */
}
